# forex-feedback-engine

./: .env  .env.example  .gitignore  Dockerfile  FIXED_README.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  validate_crypto_symbols.py  validate_fixes_v2.py  verify_fixes.py
.github/workflows/: ci.yml
feedback_loop_trading_app/: README.md  requirements.txt
feedback_loop_trading_app/src/execution/: __init__.py
feedback_loop_trading_app/src/feedback/: feedback_loop.py
src/: config.py  main.py
src/data/: data_feed.py  historical_feed.py  otc_feed.py  otc_feed.py.new
src/decision/: llm_engine.py  llm_engine_new.py  llm_engine_temp.py  llm_engine_temporal.py  prompt_config.py  temporal_prompt_config.py
src/execution/: broker_api.py
src/feedback/: __init__.py  feedback_loop.py  models.py
src/ocr/: analyzer.py  capture.py
tests/: conftest.py  test_broker_api.py  test_broker_demo_trade.py  test_capture.py  test_data_feed.py  test_feedback.py  test_feedback_persistence.py  test_llm_engine.py  test_llm_engine_temporal.py  test_main.py  test_main_run_session.py  test_main_run_session.py.new  test_main_with_side_effect.py  test_otc_feed.py  test_prompt_config.py
